# sal

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  cabal.project.freeze  sal.cabal
app/: Inflation.hs  Main.hs  Salaries.hs  Types.hs
